# django-authlib

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
authlib/: __init__.py  _compat.py  backends.py  base.py  base_user.py  email.py  facebook.py  google.py  permissions.py  roles.py  twitter.py  utils.py  views.py
authlib/admin_oauth/: urls.py  views.py
authlib/admin_oauth/locale/de/LC_MESSAGES/: django.mo  django.po
authlib/admin_oauth/templates/admin/: login.html
authlib/little_auth/: __init__.py  admin.py  apps.py  models.py
authlib/little_auth/locale/de/LC_MESSAGES/: django.mo  django.po
authlib/little_auth/migrations/: 0001_initial.py  0002_user_role.py
authlib/locale/de/LC_MESSAGES/: django.mo  django.po
docs/: conf.py
tests/: cov.sh  requirements.txt
tests/testapp/: settings.py  test_authlib.py  test_registration.py  test_roles.py  test_utils.py  urls.py  views.py
tests/testapp/templates/registration/: email_registration.html  email_registration_email.txt  login.html
