[metadata]
name = django_authlib
version = attr: authlib.__version__
description = Authentication utils for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-authlib/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    requests-oauthlib
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage
    requests-mock

[options.packages.find]
exclude =
    tests
    testapp

[coverage:run]
branch = True
include =
    *authlib*
omit =
    *migrations*
    *tests*
    *.tox*
    authlib/facebook.py
    authlib/twitter.py
